--- a/lib/translations/lib/gl.json
+++ b/lib/translations/lib/gl.json
@@ -1,5 +1,5 @@
 {
-  "404.back-to-democracyos": "volve a Marea Atlántica",
+  "404.back-to-democracyos": "volve a DemocracyOS",
   "404.go-back-to": "volve a",
   "404.not-exists": "Esta páxina non existe",
   "admin-sidebar.tags.create": "Crear",
@@ -8,21 +8,21 @@
   "admin-sidebar.topics.create": "Crear",
   "admin-sidebar.topics.list": "Listaxe",
   "admin-sidebar.topics.title": "Leis",
-  "admin-sidebar.whitelists.title": "Utilisateurs activés",
+  "admin-sidebar.whitelists.title": "Usuarios activos",
   "admin-tags-form.button.submit": "Gardar",
   "admin-tags-form.label.image": "Imaxe",
   "admin-tags-form.label.name": "Nome",
   "admin-tags-form.message.onsuccess": "Etiqueta gardada exitosamente",
-  "admin-tags-form.message.validation.name-required": "Nome requirido",
+  "admin-tags-form.message.validation.name-required": "Nome requerido",
   "admin-tags-form.placeholder.name": "Nome de etiqueta",
   "admin-tags-form.title.create": "Nova etiqueta",
   "admin-tags-form.title.edit": "Edición de etiqueta",
   "admin-tags.list.add-tag": "Novo",
   "admin-tags.list.search.placeholder": "Buscar unha marca ...",
   "admin-tags.list.title": "Etiquetas do sistema",
-  "admin-topics-form.alert.no-tags": "Ningunha etiqueta se atoparon, por favor, cree unha antes de comezar a crear temas",
+  "admin-topics-form.alert.no-tags": "Non se atopou ningunha etiqueta, por favor, cree unha antes de comezar a crear temas",
   "admin-topics-form.button.add-clause": "Novo artigo",
-  "admin-topics-form.button.add-link": "Agregar link",
+  "admin-topics-form.button.add-link": "Engadir ligazón",
   "admin-topics-form.button.make-private": "Despublicar",
   "admin-topics-form.button.make-public": "Publicar",
   "admin-topics-form.button.submit": "Gardar",
@@ -42,7 +42,7 @@
   "admin-topics-form.delete-topic.confirmation.ok": "Eliminar",
   "admin-topics-form.delete-topic.confirmation.title": "Eliminar lei",
   "admin-topics-form.label.author": "Autor",
-  "admin-topics-form.label.clause-truncation-text": "Texto para ler articulado",
+  "admin-topics-form.label.clause-truncation-text": "Texto para ler artigo",
   "admin-topics-form.label.closingAt": "Data de peche",
   "admin-topics-form.label.mediaTitle": "Título",
   "admin-topics-form.label.resources": "Recursos",
@@ -51,16 +51,16 @@
   "admin-topics-form.label.tag": "Comisión",
   "admin-topics-form.label.topicId": "Identificación oficial",
   "admin-topics-form.label.votable": "Votable",
-  "admin-topics-form.link.confirmation.title": "Eliminar link",
+  "admin-topics-form.link.confirmation.title": "Eliminar ligazón",
   "admin-topics-form.message.add-clause-forbidden": "A lei debe gardarse antes de agregar artigos",
   "admin-topics-form.message.add-link-forbidden": "A lei debe gardarse antes de agregar links",
   "admin-topics-form.message.onsuccess": "Lei gardada exitosamente",
   "admin-topics-form.message.private-status": "Esta lei é un borrador",
   "admin-topics-form.message.public-status": "Esta lei está aberta ao público",
-  "admin-topics-form.message.validation.mediaTitle-required": "Título mediático requirido",
+  "admin-topics-form.message.validation.mediaTitle-required": "Título mediático requerido",
   "admin-topics-form.message.validation.source-invalid": "Fonte debe ser unha URL válida",
-  "admin-topics-form.message.validation.source-required": "Fonte requirida",
-  "admin-topics-form.message.validation.topicId-required": "Identificación oficial requirida",
+  "admin-topics-form.message.validation.source-required": "Fonte requerida",
+  "admin-topics-form.message.validation.topicId-required": "Identificación oficial requerida",
   "admin-topics-form.placeholder.source": "http://fuente-de-leyes.org/url-oficial/",
   "admin-topics-form.title.create": "Nova lei",
   "admin-topics-form.title.edit": "Edición de lei",
@@ -71,24 +71,24 @@
   "admin-topics.list.search.placeholder": "Procure un tema ...",
   "admin-topics.list.sort": "Tipo",
   "admin-topics.list.title": "Leis do sistema",
-  "admin-whitelist.actions": "Actes",
-  "admin-whitelist.delete-whitelist.confirmation.body": "Cette action va effacer définitivement les données. Voulez-vous procéder?",
-  "admin-whitelist.delete-whitelist.confirmation.cancel": "Annuler",
-  "admin-whitelist.delete-whitelist.confirmation.ok": "Effacer",
-  "admin-whitelist.delete-whitelist.confirmation.title": "Supprimer la règle",
-  "admin-whitelist.type": "Type",
-  "admin-whitelist.value": "Valeur",
-  "admin-whitelists-form.button.delete": "Effacer",
-  "admin-whitelists-form.button.submit": "Enregistrer",
-  "admin-whitelists-form.message.onsuccess": "Règle enregistré avec succès...",
+  "admin-whitelist.actions": "Actas",
+  "admin-whitelist.delete-whitelist.confirmation.body": "Esta acción borrará definitivamente os datos. Queres continuar?",
+  "admin-whitelist.delete-whitelist.confirmation.cancel": "Cancelar",
+  "admin-whitelist.delete-whitelist.confirmation.ok": "Confirmar",
+  "admin-whitelist.delete-whitelist.confirmation.title": "Eliminar a regla",
+  "admin-whitelist.type": "Tipo",
+  "admin-whitelist.value": "Valor",
+  "admin-whitelists-form.button.delete": "Borrar",
+  "admin-whitelists-form.button.submit": "Enviar",
+  "admin-whitelists-form.message.onsuccess": "Regla rexistrada con éxito...",
   "admin-whitelists-form.value.placeholder": "Separados por comas e-mails ou só un correo electrónico",
-  "admin-whitelists.list.add-whitelist": "Ajouter",
-  "admin-whitelists.list.search.placeholder": "Rechercher une règle...",
+  "admin-whitelists.list.add-whitelist": "Engadir",
+  "admin-whitelists.list.search.placeholder": "Buscar unha regla...",
   "article.unknown-closing-date": "Data de peche descoñecida",
   "browser-update.ie-old-version-warning": "Estas usando unha versión non soportada de Internet Explorer.",
-  "browser-update.in-order-warning": "Para poder usar DemocracyOS, por favor actualzá o teu navegador",
+  "browser-update.in-order-warning": "Para poder usar DemocracyOS, por favor actualiza o teu navegador",
   "browser-update.switch-to": "Cambiar a ",
-  "browser-update.update-your": "Actualiza o teu version de ",
+  "browser-update.update-your": "Actualiza a túa version de ",
   "browser-update.why": "Por que?",
   "browser-update.why.newer-browsers": "Os navegadores mais modernos toman as vantaxes das novas tencologias e aseguran experiencias mais seguras.",
   "browser-update.woops": "Ops!",
@@ -111,7 +111,7 @@
   "comments.load-more": "Ler máis argumentos",
   "comments.my.arguments": "Cal é o teu argumento?",
   "comments.new.argument": "Agregar argumento",
-  "comments.no-comments": "Ningún usuario fixo unha argumented sobre este tema aínda",
+  "comments.no-comments": "Ningún usuario fixo unha argumentación sobre este tema aínda",
   "comments.no-user-comments": "Ningún outro usuario fixo unha discusión sobre ese tema aínda.",
   "comments.not-yours": "Ese argumento non é teu!",
   "comments.ordered-by": "Ordenados por",
@@ -124,7 +124,7 @@
   "comments.reply-to-argument": "Responde este argumento",
   "comments.score.not-allowed": "Non podes votar o teu propio argumento",
   "comments.send": "Enviar",
-  "comments.sign-in-required": "Debés estar rexistrado para poder argumentar aquí",
+  "comments.sign-in-required": "Debes estar rexistrado para poder argumentar aquí",
   "comments.sign-in-required-to-vote-comments": "Debes estar rexistrado para poder cualificar argumentos",
   "comments.sorts.newest-first": "Máis novos primeiro",
   "comments.sorts.oldest-first": "Máis vellos primeiro",
@@ -143,9 +143,9 @@
   "common.or": "ou",
   "common.read-more": "Ler máis",
   "democracyos.markdown.flavored": "Formato de texto",
-  "forgot.error.email-not-valid": "Vostede debe validar o enderezo de correo electrónico antes de pode axustar o contrasinal da conta",
+  "forgot.error.email-not-valid": "Debes validar o enderezo de correo electrónico antes de pode axustar o contrasinal da conta",
   "forgot.explanation": "Enviarémosche un correo electrónico cunha ligazón para reestablecer o teu contrasinal",
-  "forgot.mail.example": "ejemplo@email.com",
+  "forgot.mail.example": "exemplo@email.com",
   "forgot.mail.sent": "Enviamos unha mensaxe ao teu correo electrónico con instrucións para crear un novo contrasinal",
   "forgot.question": "Esqueciches o teu contrasinal?",
   "forgot.reset": "Reestablecer contrasinal!",
@@ -181,12 +181,12 @@
   "markdown.playground.title": "A xogar",
   "markdown.text.1": "Marea Atlántica usa as seguintes regras de markdown para argumentar as leis",
   "markdown.title.emphasis": "Énfase de texto",
-  "markdown.url-autolinking.example": "Ingresa a http://ejemplo.com",
+  "markdown.url-autolinking.example": "Ingresa en http://ejemplo.com",
   "markdown.url-autolinking.example2": "[Ingresa a Exemplo.com!](http://www.ejemplo.com)",
-  "markdown.url-autolinking.text": "Marea Atlántica porá un link automaticamente ás URLs standard, así que se queres linkear a unha URL, simplemente podes ingresar a URL e o link agregarase automaticamente",
-  "markdown.url-autolinking.text.2": "Ademais, podes crear un link pondo o texto entre corchetes ( [ ] ), e logo a URL entre paréntese ( ( ) ).",
-  "markdown.url-autolinking.text.3": "Por exemplo, para crear un link a http://www.ejemplo.com, cun texto que diga \"Ingresa a Exemplo.com!\" escribirías o seguinte:",
-  "markdown.url-autolinking.title": "Links",
+  "markdown.url-autolinking.text": "DemocracyOS porá un link automaticamente ás URLs standard, así que se queres ligar a unha URL, simplemente podes ingresar a URL e a ligazón agregarase automaticamente",
+  "markdown.url-autolinking.text.2": "Ademais, podes crear unha ligazón poñendo o texto entre corchetes ( [ ] ), e logo a URL entre paréntese ( ( ) ).",
+  "markdown.url-autolinking.text.3": "Por exemplo, para crear unha ligazón a http://www.ejemplo.com, cun texto que diga \"Vai a Exemplo.com!\" escribirías o seguinte:",
+  "markdown.url-autolinking.title": "Ligazóns",
   "markdown.will.become": "Resultará:",
   "notifications.error": "Non é posible conectarse ao motor de notificacións",
   "password": "Contrasinal",
@@ -207,12 +207,12 @@
   "proposal-options.no-votes-cast": "Sen votos contados",
   "proposal-options.vote": "Voto",
   "proposal-options.vote-item": "voto",
-  "proposal-options.voted-abstained": "Decidiches absterche de votar",
+  "proposal-options.voted-abstained": "Decidiches absterte de votar",
   "proposal-options.voted-nay": "Votaches en contra",
   "proposal-options.voted-yea": "Votaches a favor",
   "proposal-options.votes-cast": "{num} votos contados",
   "proposal-options.yea": "Afirmativo",
-  "resend-validation-email-form.error.email-not-valid.no-link": "O enderezo de correo electrónico para este usuario non é validado. Nós enviar aos usuarios unha mensaxe de benvida cando se rexistrar. Por favor, comprobe o seu correo-e (lembre de comprobar a súa carpeta de spam tamén) e prema no enlace no correo electrónico.",
+  "resend-validation-email-form.error.email-not-valid.no-link": "O enderezo de correo electrónico para este usuario non está validado. Nós enviamos aos usuarios unha mensaxe de benvida cando se rexistran. Por favor, comproba o teu enderezo electrónico (lembra de comprobar o teu cartafol de correo non desexado tamén) e preme na ligazón no correo electrónico.",
   "settings-notifications.no": "Non",
   "settings-notifications.yes": "Si",
   "settings.change-at-gravatar": "Muda a túa foto de perfil en gravatar.com",
@@ -221,16 +221,16 @@
   "settings.current-password": "Contrasinal actual",
   "settings.first-name": "Nome",
   "settings.last-name": "Apelido",
-  "settings.locale": "Language",
+  "settings.locale": "Linguaxe",
   "settings.locale.ca": "Catalán",
-  "settings.locale.de": "Deutsche",
+  "settings.locale.de": "Alemán",
   "settings.locale.en": "Inglés",
   "settings.locale.es": "Español",
-  "settings.locale.fi": "Finlandesa",
+  "settings.locale.fi": "Finés",
   "settings.locale.fr": "Francés",
   "settings.locale.gl": "Galego",
   "settings.locale.it": "Italiano",
-  "settings.locale.nl": "Dutch",
+  "settings.locale.nl": "Holandés",
   "settings.locale.pl": "Polaco",
   "settings.locale.pt": "Portugués",
   "settings.locale.ro": "Romanés",
@@ -243,8 +243,8 @@
   "settings.notifications.new-topic": "Un novo tema é publicado",
   "settings.notifications.title": "Configuración de notificacións",
   "settings.notificatoins.someone-replies-your-comments": "Alguén contesta un dos teus argumentos",
-  "settings.password-invalid": "O contrasinal actual non é correcta",
-  "settings.password-updated": "O teu contrasinal foi actualizada exitosamente",
+  "settings.password-invalid": "A contrasinal actual non é correcta",
+  "settings.password-updated": "A túa contrasinal foi actualizada exitosamente",
   "settings.paste-url-image": "Ou pega unha URL coa túa imaxe aquí...",
   "settings.profile": "Perfil",
   "settings.save": "Gardar",
@@ -266,16 +266,16 @@
   "sidebar.hide-voted": "Ocultar votados por min",
   "sidebar.open": "Abertos",
   "signin.account-disabled": "Esta conta foi deshabilitada",
-  "signin.action.signup": "Fai o rexistro",
+  "signin.action.signup": "Rexístrate",
   "signin.dont-have-account": "Non ten unha conta?",
-  "signin.error.email-not-valid": "O enderezo de correo electrónico para este usuario non é validado. Nós enviar aos usuarios unha mensaxe de benvida cando se rexistrar. Por favor, comprobe o seu correo-e (lembre de comprobar a súa carpeta de spam tamén) e prema no enlace no correo electrónico. Prema <a href='/signup/resend-validation-email'>aquí</a> se precisa do correo electrónico de benvida para ser reenviado",
-  "signin.login": "Póñase-se",
+  "signin.error.email-not-valid": "O enderezo de correo electrónico para este usuario non está validado. Nós enviamos aos usuarios unha mensaxe de benvida cando se rexistran. Por favor, comproba o teu enderezo electrónico (lembre de comprobar o teu cartafol de correo non deseado tamén) e prema na ligazón no correo electrónico. Prema <a href='/signup/resend-validation-email'>aquí</a> se precisa que lle reenviemos o correo electrónico de benvida",
+  "signin.login": "Entra",
   "signin.login-to": "Ingresar a",
-  "signin.signup": "Rexístrate Se",
-  "signup.accepting": "Rexistrándoche estás a aceptar nosas",
+  "signin.signup": "Rexístrate",
+  "signup.accepting": "Rexistrándote estás a aceptar nosas",
   "signup.being-redirected": "En 5 segundos serás redirixido",
   "signup.browsing": "comezar",
-  "signup.check-email": "O seguinte paso é abrir o correo electrónico que che enviamos (non te esquezas do cartafol 'Correo non desexado') e facer clic na ligazón provisto.",
+  "signup.check-email": "O seguinte paso é abrir o correo electrónico que che enviamos (non te esquezas do cartafol 'Correo non desexado') e facer clic na ligazón provista.",
   "signup.complete": "Rexistro completo",
   "signup.email": "Correo electrónico",
   "signup.email-sent": "Correo electrónico enviado",
@@ -285,15 +285,15 @@
   "signup.lastname": "Apelido",
   "signup.now": "Rexistrarme agora!",
   "signup.now-can-vote": "Xa podes argumentar e votar nos proxectos!",
-  "signup.received": "Rexistráchesche. Enviámosche un correo electrónico para que poidas validar a túa dirección de correo electrónico.",
+  "signup.received": "Rexistrácheste. Enviámosche un correo electrónico para que poidas validar a túa dirección de correo electrónico.",
   "signup.resend-email": "Reenviar",
   "signup.resend-validation-email": "Reenviar correo electrónico de validación",
   "signup.resend-validation-email-complete": "Reenviar correo electrónico de validación completado",
   "signup.retype-password": "Reingresa o contrasinal",
-  "signup.user-already-validated": "Ese cidadán xa validado o enderezo de correo electrónico",
+  "signup.user-already-validated": "Ese cidadán xa validou o enderezo de correo electrónico",
   "signup.validation-email-resent": "O correo electrónico de validación foi reenviado.",
   "signup.welcome": "Benvida, benvido, {name}!",
-  "signup.whitelist.email": "Email {email} non é permitido polo administrador",
+  "signup.whitelist.email": "Email {email} non está permitido polo administrador",
   "signup.with-email": "Rexistro con correo electrónico",
   "signup.your-firstname": "O teu nome",
   "signup.your-lastname": "O teu apelido",
@@ -317,5 +317,5 @@
   "validators.min-length.singular": "Debe ter polo menos 1 caracter",
   "validators.not.match": "Non coinciden",
   "validators.password.not.match": "Os contrasinais non coinciden",
-  "validators.required": "Requirido"
+  "validators.required": "Requerido"
 }
